cmake_minimum_required(VERSION 3.0)
project(yodaos-volume CXX)
set(CMAKE_CXX_STANDARD 11)

# MARK: - volume
set(APP_ROOT_DIR "/opt/apps/volume")
set(APP_INSTALL_DIR "${CMAKE_INSTALL_DIR}${APP_ROOT_DIR}")

file(GLOB VOLUME_SRC *.js *.json)

install(FILES ${VOLUME_SRC}
  DESTINATION ${APP_INSTALL_DIR}
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
